--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ __pycache__/GUI.cpython-36.pyc
 __pycache__/utils.cpython-36.pyc
 __pycache__/gui.cpython-36.pyc
 __pycache__/analysis.cpython-36.pyc
+__pycache__/GUI.cpython-36.pyc
+__pycache__/gui.cpython-36.pyc
+__pycache__/GUI.cpython-36.pyc
+*.pyc
